...
        }}
      />
      <Tab.Screen
        name="Scientific"
        component={ScientificCalculator}
        options={{
          tabBarLabel: '科学',
          title: '科学计算器',
        }}
      />
      <Tab.Screen
        name="Graphing"
        component={GraphingCalculator}
...
